--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - laravel-db
     networks:
       - nonprofit-network
-    command: tail -f /dev/null
+    command: php artisan serve --host=0.0.0.0 --port=8000
 
   # MariaDB for Laravel
   laravel-db:
@@ -66,7 +66,7 @@ services:
       - MARIADB_USER=laraveluser
       - MARIADB_PASSWORD=laravelpass
     ports:
-      - "3307:3306"
+      - "3308:3306"
     networks:
       - nonprofit-network
 
@@ -75,7 +75,7 @@ services:
     image: adminer:latest
     container_name: nonprofit-adminer
     ports:
-      - "8080:8080"
+      - "8082:8080"
     depends_on:
       - drupal-db
       - laravel-db
